k8s/base/secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: faq-system
  labels:
    name: faq-system
